# sycamore-extract

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
docs/decisions/: 2026-06-12-release-pipeline-restructure.md  2026-06-12-session-01Ejzd3TmMRZcGMj5umkdxLW.md  2026-06-12-session-sharp-goodall-0xObf.md  2026-06-12-session-vigilant-wright-018PPLNhiAv325425icnyf8g.md  2026-06-12-v0111-rollout-verification.md
examples/: bg_cache.py  finder_loop.py
scripts/: build_cross.sh  build_native.sh
src/: lib.rs
tests/: ab_background.py  ab_gates.py  backend_speed_test.py  bench.py  bench_pipeline.py  inspect_disagreement.py  test_roi.py
